// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhoneNumber /> should render properly for various country codes: [object Object] 1`] = `
<div
  className="ms-Fabric root-33"
>
  <div
    className="ms-TextField root"
  >
    <div
      className="ms-TextField-wrapper wrapper"
    >
      <label
        className="ms-Label root-34"
        htmlFor="TextField0"
      >
        Phone Field
      </label>
      <div
        className="ms-TextField-fieldGroup fieldGroup"
      >
        <input
          aria-describedby={undefined}
          aria-invalid={false}
          aria-label={undefined}
          className="ms-TextField-field field input "
          disabled={false}
          id="TextField0"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          placeholder="Phone Field"
          type="text"
          value="+"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneNumber /> should render properly for various country codes: [object Object] 2`] = `
<div
  className="ms-Fabric root-33"
>
  <div
    className="ms-TextField root"
  >
    <div
      className="ms-TextField-wrapper wrapper"
    >
      <label
        className="ms-Label root-34"
        htmlFor="TextField2"
      >
        Phone Field
      </label>
      <div
        className="ms-TextField-fieldGroup fieldGroup"
      >
        <input
          aria-describedby={undefined}
          aria-invalid={false}
          aria-label={undefined}
          className="ms-TextField-field field input "
          disabled={false}
          id="TextField2"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          placeholder="Phone Field"
          type="text"
          value="+"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneNumber /> should render properly for various country codes: [object Object] 3`] = `
<div
  className="ms-Fabric root-33"
>
  <div
    className="ms-TextField root"
  >
    <div
      className="ms-TextField-wrapper wrapper"
    >
      <label
        className="ms-Label root-34"
        htmlFor="TextField4"
      >
        Phone Field
      </label>
      <div
        className="ms-TextField-fieldGroup fieldGroup"
      >
        <input
          aria-describedby={undefined}
          aria-invalid={false}
          aria-label={undefined}
          className="ms-TextField-field field input "
          disabled={false}
          id="TextField4"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          placeholder="Phone Field"
          type="text"
          value="+"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneNumber /> should render properly for various country codes: [object Object] 4`] = `
<div
  className="ms-Fabric root-33"
>
  <div
    className="ms-TextField root"
  >
    <div
      className="ms-TextField-wrapper wrapper"
    >
      <label
        className="ms-Label root-34"
        htmlFor="TextField6"
      >
        Phone Field
      </label>
      <div
        className="ms-TextField-fieldGroup fieldGroup"
      >
        <input
          aria-describedby={undefined}
          aria-invalid={false}
          aria-label={undefined}
          className="ms-TextField-field field input "
          disabled={false}
          id="TextField6"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          placeholder="Phone Field"
          type="text"
          value="+"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneNumber /> should render properly for various country codes: [object Object] 5`] = `
<div
  className="ms-Fabric root-33"
>
  <div
    className="ms-TextField root"
  >
    <div
      className="ms-TextField-wrapper wrapper"
    >
      <label
        className="ms-Label root-34"
        htmlFor="TextField8"
      >
        Phone Field
      </label>
      <div
        className="ms-TextField-fieldGroup fieldGroup"
      >
        <input
          aria-describedby={undefined}
          aria-invalid={false}
          aria-label={undefined}
          className="ms-TextField-field field input "
          disabled={false}
          id="TextField8"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          placeholder="Phone Field"
          type="text"
          value="+"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneNumber /> should render properly for various country codes: [object Object] 6`] = `
<div
  className="ms-Fabric root-33"
>
  <div
    className="ms-TextField root"
  >
    <div
      className="ms-TextField-wrapper wrapper"
    >
      <label
        className="ms-Label root-34"
        htmlFor="TextField10"
      >
        Phone Field
      </label>
      <div
        className="ms-TextField-fieldGroup fieldGroup"
      >
        <input
          aria-describedby={undefined}
          aria-invalid={false}
          aria-label={undefined}
          className="ms-TextField-field field input "
          disabled={false}
          id="TextField10"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          placeholder="Phone Field"
          type="text"
          value="+"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneNumber /> should render properly for various country codes: [object Object] 7`] = `
<div
  className="ms-Fabric root-33"
>
  <div
    className="ms-TextField root"
  >
    <div
      className="ms-TextField-wrapper wrapper"
    >
      <label
        className="ms-Label root-34"
        htmlFor="TextField12"
      >
        Phone Field
      </label>
      <div
        className="ms-TextField-fieldGroup fieldGroup"
      >
        <input
          aria-describedby={undefined}
          aria-invalid={false}
          aria-label={undefined}
          className="ms-TextField-field field input "
          disabled={false}
          id="TextField12"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          placeholder="Phone Field"
          type="text"
          value="+"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneNumber /> should render properly for various country codes: [object Object] 8`] = `
<div
  className="ms-Fabric root-33"
>
  <div
    className="ms-TextField root"
  >
    <div
      className="ms-TextField-wrapper wrapper"
    >
      <label
        className="ms-Label root-34"
        htmlFor="TextField14"
      >
        Phone Field
      </label>
      <div
        className="ms-TextField-fieldGroup fieldGroup"
      >
        <input
          aria-describedby={undefined}
          aria-invalid={false}
          aria-label={undefined}
          className="ms-TextField-field field input "
          disabled={false}
          id="TextField14"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          placeholder="Phone Field"
          type="text"
          value="+"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneNumber /> should render properly for various country codes: [object Object] 9`] = `
<div
  className="ms-Fabric root-33"
>
  <div
    className="ms-TextField root"
  >
    <div
      className="ms-TextField-wrapper wrapper"
    >
      <label
        className="ms-Label root-34"
        htmlFor="TextField16"
      >
        Phone Field
      </label>
      <div
        className="ms-TextField-fieldGroup fieldGroup"
      >
        <input
          aria-describedby={undefined}
          aria-invalid={false}
          aria-label={undefined}
          className="ms-TextField-field field input "
          disabled={false}
          id="TextField16"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          placeholder="Phone Field"
          type="text"
          value="+"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneNumber /> should render properly with value set: [object Object] 1`] = `
<div
  className="ms-Fabric root-33"
>
  <div
    className="ms-TextField root"
  >
    <div
      className="ms-TextField-wrapper wrapper"
    >
      <label
        className="ms-Label root-34"
        htmlFor="TextField18"
      >
        Phone Field
      </label>
      <div
        className="ms-TextField-fieldGroup fieldGroup"
      >
        <input
          aria-describedby={undefined}
          aria-invalid={false}
          aria-label={undefined}
          className="ms-TextField-field field input "
          disabled={false}
          id="TextField18"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onInput={[Function]}
          placeholder="Phone Field"
          type="text"
          value="+7 793 847 41"
        />
      </div>
    </div>
  </div>
</div>
`;
